--- a/TextEditor-FinalProject.vcxproj
+++ b/TextEditor-FinalProject.vcxproj
@@ -79,6 +79,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="EditorGenerator.cpp" />
+    <ClCompile Include="FileManager.cpp" />
+    <ClCompile Include="MyMenu.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FileManager.h" />
+    <ClInclude Include="MyMenu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
