--- a/TextEditor-FinalProject.vcxproj
+++ b/TextEditor-FinalProject.vcxproj
@@ -78,7 +78,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Visual Studio 2013\Projects\CECS2223\Tipo\MyString.cpp" />
     <ClCompile Include="EditorGenerator.cpp" />
+    <ClCompile Include="FileManager.cpp" />
+    <ClCompile Include="MyMenu.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Visual Studio 2013\Projects\CECS2223\Tipo\MyString.h" />
+    <ClInclude Include="FileManager.h" />
+    <ClInclude Include="MyMenu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
