--- a/TextEditor-FinalProject.vcxproj
+++ b/TextEditor-FinalProject.vcxproj
@@ -81,12 +81,16 @@
     <ClCompile Include="..\Visual Studio 2013\Projects\CECS2223\Tipo\MyString.cpp" />
     <ClCompile Include="EditorGenerator.cpp" />
     <ClCompile Include="FileManager.cpp" />
+    <ClCompile Include="ListaDeCadenas.cpp" />
     <ClCompile Include="MyMenu.cpp" />
+    <ClCompile Include="MyString.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Visual Studio 2013\Projects\CECS2223\Tipo\MyString.h" />
     <ClInclude Include="FileManager.h" />
+    <ClInclude Include="ListaDeCadenas.h" />
     <ClInclude Include="MyMenu.h" />
+    <ClInclude Include="MyString.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
